# ingest-events-test-task

./: ADR.md  Dockerfile  LEARNED.md  README.md  docker-compose.yml  pyproject.toml
src/: bench.py  config.py  main.py  schemas.py  scripts.py  services.py
src/bench/: bench.py
src/database/: connection.py  models.py
src/middleware/: api_check.py  rate_limit.py
src/observability/: logging.py
src/routers/: benchmark.py  routers.py
src/scripts/: import.py
src/worker/: celery_.py  tasks.py
tests/: conftest.py  test_bench.py  test_indepotency.py  test_indexes.py  test_integration_flow.py  tests.py
