[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Leo",email = "leonsiypopov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "certifi (==2026.1.4)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.1)",
    "colorama (==0.4.6)",
    "fastapi (==0.128.0)",
    "greenlet (==3.3.0)",
    "h11 (==0.16.0)",
    "idna (==3.11)",
    "markdown-it-py (==4.0.0)",
    "mdurl (==0.1.2)",
    "numpy (==2.4.1)",
    "pandas (==2.3.3)",
    "prometheus-fastapi-instrumentator (==7.1.0)",
    "prometheus-client (==0.24.1)",
    "psycopg-binary (==3.3.2)",
    "psycopg2 (==2.9.11)",
    "pydantic (==2.12.5)",
    "pydantic-settings (==2.12.0)",
    "pydantic-core (==2.41.5)",
    "pygments (==2.19.2)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.2.1)",
    "pytz (==2025.2)",
    "requests (==2.32.5)",
    "rich (==14.2.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sqlalchemy (==2.0.45)",
    "starlette (==0.50.0)",
    "typer (==0.21.1)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.3)",
    "urllib3 (==2.6.3)",
    "uvicorn (==0.40.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "celery (>=5.6.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
import_events = "src.scripts.import:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

